css/style.css
/* ... */
.stocks-card__heading {
  margin: 0 0 25px;
  font-weight: 700;
  font-size: 24px;
  line-height: 1;
  text-align: center;
  text-transform: uppercase;
}
.stocks-card__description {
  margin: 0 0 45px;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4;
  text-align: center;
}
.stocks-card__wrapper-btn {
  display: flex;
  gap: 20px;
}
@media (max-width: 767px) {
  .stocks-card__wrapper-btn {
    flex-direction: column;
  }
}
.stocks-card__btn {
  flex: 1;
  padding: 18px;
  border-radius: 10px;
  background-color: #574524;
  font-weight: 600;
  font-size: 12px;
  color: #FFFFFF;
  cursor: pointer;
  border: none;
}
.stocks-card__btn--secondary {
  border: 1px solid #574524;
  color: #574524;
  background-color: #FFFAE8;
}
.stocks-card__label {
  position: absolute;
  top: 20px;
  left: 20px;
  padding: 15px;
  font-weight: 400;
  font-size: 16px;
  background-color: #574524;
  color: #FFFFFF;
  text-transform: uppercase;
  border-radius: 10px;
}
.stocks-card__label--bottom {
  top: auto;
  left: auto;
  bottom: 20px;
  right: 20px;
}
.stocks-card__fullscreen-btn {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  width: 40px;
  height: 40px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.product-card {
  background: linear-gradient(89.82deg, #C1DFC4 2.25%, #DEECDD 99.84%);
  border-radius: 20px;
  padding: 22px 20px 25px;
  height: 100%;
  display: flex;
  flex-direction: column;
}
.product-card:focus-visible {
  outline: 1px solid rgba(71, 80, 9, 0.7);
}
.product-card__title {
  margin: 0 0 25px;
  font-weight: 700;
  font-size: 32px;
  line-height: 38px;
  color: #475009;
  text-align: center;
}
@media (max-width: 1439px) {
  .product-card__title {
    font-size: 28px;
    line-height: 34px;
  }
}
@media (max-width: 767px) {
  .product-card__title {
    font-size: 24px;
    line-height: 30px;
    margin-bottom: 20px;
  }
}
.product-card:hover .product-card__title {
  color: rgba(71, 80, 9, 0.7);
}
.product-card__wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
}
.product-card__heading {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  margin-bottom: 20px;
}
.product-card__img {
  width: 100%;
  height: 152px;
  border-radius: 0 130px 0 130px;
  -o-object-fit: cover;
     object-fit: cover;
}
.product-card__name {
  font-weight: 400;
  font-style: italic;
  font-size: 14px;
  line-height: 18px;
  color: #475009;
  text-align: center;
}
.product-card__info-wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
}
.product-card__description {
  margin: 0 0 20px;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  color: #475009;
}
.product-card__info {
  border-radius: 20px;
  background-color: #FFFFFF;
  padding: 20px;
  margin-top: auto;
}
.product-card__care {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  margin: 0 0 20px;
}
.product-card__care-group {
  display: flex;
  flex-direction: column;
}
.product-card__care-group--right {
  text-align: right;
}
.product-card__care-condition {
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  color: #475009;
  margin: 0 0 5px;
}
.product-card__care-value {
  font-weight: 400;
  font-size: 12px;
  line-height: 12px;
  color: #475009;
}
.product-card__btns {
  display: flex;
  gap: 15px;
}
@media (max-width: 1200px) {
  .product-card__btns {
    flex-direction: column;
  }
}
.product-card__btn {
  width: 50%;
  border-radius: 30px;
  padding: 14px;
  font-size: 14px;
}
@media (max-width: 1200px) {
  .product-card__btn {
    width: 100%;
  }
}

.cookie {
  position: fixed;
  right: 30px;
  bottom: 30px;
  z-index: 200;
  display: none;
  width: 100%;
  max-width: 500px;
  min-height: 180px;
  padding: 40px 30px;
  border: 1px solid #475009;
  border-radius: 20px;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  background-color: #FFFFFF;
}
@media (max-width: 767px) {
  .cookie {
    right: 15px;
    bottom: 15px;
    max-width: calc(100% - 30px);
    padding: 25px 20px;
  }
}
.cookie--active {
  display: block;
}
.cookie__text {
  margin: 0 0 30px;
  font-weight: 700;
  font-size: 14px;
  line-height: 18px;
  text-align: center;
  color: #000000;
}
.cookie__link {
  text-decoration: underline;
  color: inherit;
}
.cookie__btn {
  width: 150px;
  margin: 0 auto;
}

.custom-radio {
  position: relative;
  width: 100%;
  max-width: 500px;
}
.custom-radio__field:checked + .custom-radio__label::after {
  background-color: #475009;
}
.custom-radio__label {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 10px 25px 10px 56px;
  border: 2px solid #475009;
  border-radius: 10px;
  cursor: pointer;
}
.custom-radio__label:hover {
  border-color: rgba(71, 80, 9, 0.4);
}
.custom-radio__label:hover::after {
  background-color: rgba(71, 80, 9, 0.4);
}
.custom-radio__label::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 15px;
  width: 26px;
  height: 26px;
  background-color: #D9D9D9;
  border-radius: 50%;
  transform: translateY(-50%);
}
.custom-radio__label::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 22px;
  width: 12px;
  height: 12px;
  background-color: #FFFFFF;
  border-radius: 50%;
  transform: translateY(-50%);
}
.custom-radio__field:focus-visible + .custom-radio__label {
  border-color: #502198;
  outline: none;
}
.custom-radio__field:focus-visible + .custom-radio__label::after {
  background-color: #502198;
}
.custom-radio__field:focus-visible + .custom-radio__label .custom-radio__top, .custom-radio__field:focus-visible + .custom-radio__label .custom-radio__text {
  color: #000000;
}
.custom-radio__label:hover .custom-radio__top, .custom-radio__label:hover .custom-radio__text {
  color: rgba(0, 0, 0, 0.7);
}
/* ... */

